# rs-stats

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PULL_REQUEST.md  README.md  crates.js  pr_extractor.sh  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  codecov.yml  doc.yml  template-sync.yml
benches/: benchmarks.rs
docs/: panic-free-refactoring-plan.md
pr_info/: branch_diff.patch  changed_files.txt  commit_messages.md  diff_stats.txt  pr_description_template.md
rs_stats/: all.html  fn.average.html  fn.cummulative_distrib.html  fn.erf.html  fn.erfc.html  fn.normal_cummulative_distrib.html  fn.normal_probability_density.html  fn.probability_density.html  fn.std_dev.html  fn.std_err.html  fn.variance.html  fn.zscore.html  index.html  sidebar-items.js
scripts/: pre-commit-hook  pre-work-hook  validate-workflow-state.py
src/: average.rs  cummulative_distrib.rs  erf.rs  erfc.rs  error.rs  lib.rs  normal_cummulative_distrib.rs  prob_density.rs  std_err.rs  stddev.rs  variance.rs  z_score.rs
src/distributions/: beta.rs  binomial_distribution.rs  chi_squared.rs  exponential_distribution.rs  f_distribution.rs  fitting.rs  gamma_distribution.rs  geometric.rs  lognormal.rs  mod.rs  negative_binomial.rs  normal_distribution.rs  poisson_distribution.rs  student_t.rs  traits.rs  uniform_distribution.rs  weibull.rs
src/hypothesis_tests/: anova.rs  chi_square_test.rs  mod.rs  t_test.rs
src/prob/: average.rs  cumulative_distrib.rs  erf.rs  erfc.rs  mod.rs  normal_cumulative_distrib.rs  prob_density.rs  std_dev.rs  std_err.rs  variance.rs  welford.rs  z_score.rs
src/regression/: decision_tree.rs  linear_regression.rs  mod.rs  multiple_linear_regression.rs
src/rs_stats/: lib.rs.html
src/utils/: combinatorics.rs  constants.rs  linalg.rs  mod.rs  (+2 more)
(+1 files in other folders)
