[package]
name = "rs-stats"
version = "3.0.0"
authors = ["LSH <github@lsh.tech>"]
edition = "2024"
description = "Statistics library in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
num = "0.4.3"
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0"
bincode = "1.3"
rayon = "1.8"
thiserror = "1.0"

[features]
# (rayon is always linked; for single-threaded execution callers can
#  configure rayon's global thread pool with num_threads(1).)

[dev-dependencies]
tempfile = "3.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
